--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,73 @@
-body {
+:root {
+  --bg-color: #25272A;
+  --nav-color: #17181A;
+  --font-color: #F5F5F5;
+}
+
+* {
   margin: 0;
-  background-color: #263238;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  line-height: 1.7;
+  background-color: var(--bg-color);
+  color: var(--font-color);
 }
 
-.main {
+nav {
+  position: fixed;
+  bottom: 0px;
+  top: 0px;
+  left: 0px;
+  width: 300px;
+  background-color: var(--nav-color);
+  padding: 40px;
+}
+
+nav a {
   display: flex;
+  gap: 10px;
 }
 
-.sidebar {
-  height: 100vh;
-  margin-right: 20px;
+a {
+  text-decoration: none;
+  color: var(--font-color);
 }
 
 .logo {
-  height: 15vh;
-  width: 270px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-bottom: 40px;
 }
 
-.navbar {
-  height: 85vh;
-  width: 300px;
-  background-color: #f1f5f9;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-  padding-top: 50px;
+.logo a {
+  gap: 15px;
 }
 
-.content {
-  width: 100%;
-  height: 100vh;
-  background-color: #f1f5f9;
-  border-radius: 30px;
+.logo img {
+  width: 60px;
+  height: 60px;
 }
 
-.navlink {
-  width: 250px;
-  height: 55px;
-  background-color: #263238;
+.link {
+  transition-duration: 0.5s;
+  padding: 10px 15px;
+  margin-bottom: 20px;
   border-radius: 15px;
-  margin-left: 20px;
-  color: #f1f5f9;
+}
+
+.link:hover {
+  background-color: var(--bg-color);
+}
+
+.link a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.link p {
+  font-size: 18px;
 }
