--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ body {
 }
 
 nav {
-  position: fixed;
+  position: relative;
+  height: 100vh;
   bottom: 0px;
   top: 0px;
   left: 0px;
@@ -62,6 +63,10 @@ a {
   background-color: var(--bg-color);
 }
 
+.link.active {
+  background-color: var(--bg-color);
+}
+
 .link a {
   display: flex;
   align-items: center;
@@ -70,4 +75,28 @@ a {
 
 .link p {
   font-size: 18px;
+}
+
+#collapse {
+  padding: 15px;
+  background-color: var(--bg-color);
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+}
+
+#expand {
+  padding: 15px;
+  background-color: var(--bg-color);
+  position: fixed;
+  left: 30px;
+  bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
 }
