--- a/css/nav.css
+++ b/css/nav.css
@@ -12,20 +12,8 @@ nav {
   z-index: 100;
 }
 
-@media (min-width: 750px) {
-  nav {
-    left: 0;
-  }
-}
-
 nav.active {
-  left: 0;
-}
-
-@media (max-width: 750px) {
-  nav {
-    left: 0;
-  }
+  left: 0px;
 }
 
 nav a {
