--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,5 @@
 nav {
-  position: relative;
+  position: absolute;
   height: 100dvh;
   bottom: 0px;
   top: 0px;
@@ -14,6 +14,15 @@ nav {
 
 nav.active {
   left: 0px;
+}
+
+
+/* Inner wrapper for children (relative positioning) */
+nav>.inner {
+  position: relative;
+  /* child elements like #close will use this as reference */
+  width: 100%;
+  height: 100%;
 }
 
 nav a {
