--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,28 @@
+#expand {
+  padding: 15px;
+  background-color: var(--nav-color);
+  position: fixed;
+  left: 30px;
+  bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
 main {
-  width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
+  margin: 60px;
+}
+
+@media(min-width: 750px) {
+  main {
+    margin: 60px 180px;
+  }
+}
+
+.main-action {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
 }
