--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
-  line-height: 1.7;
   background-color: var(--bg-color);
   color: var(--font-color);
+  font-weight: 600;
 }
