--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ main {
   }
 }
 
-.main-action {
+#main-action {
   position: fixed;
   bottom: 60px;
   right: 60px;
@@ -54,14 +54,14 @@ main {
 }
 
 @media(min-width: 750px) {
-  .main-action {
+  #main-action {
     bottom: 60px;
     right: 180px;
   }
 }
 
 @media(min-width: 1400px) {
-  .main-action {
+  #main-action {
     bottom: 80px;
     right: 360px;
   }
