--- a/css/projects.css
+++ b/css/projects.css
@@ -37,12 +37,12 @@
 
 .popup-box .header {
   background-color: var(--nav-color);
-  width: 100%;
+  width: 500px;
   border-radius: 15px 15px 0px 0px;
   display: flex;
-  padding: 15px 20px;
+  padding: 15px 30px;
   align-items: center;
-  gap: 255px;
+  gap: 235px;
 }
 
 #exit {
