--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,112 @@
 :root {
-  --bg-color: #25272A;
-  --nav-color: #17181A;
-  --font-color: #F5F5F5;
+  --bg-color: #25272a;
+  --nav-color: #17181a;
+  --font-color: #f5f5f5;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  background-color: var(--bg-color);
+  color: var(--font-color);
+  font-weight: 600;
+}
+
+nav {
+  position: absolute;
+  height: 100dvh;
+  bottom: 0px;
+  top: 0px;
+  left: 0px;
+  width: 300px;
+  background-color: var(--nav-color);
+  padding: 40px;
+  left: -300px;
+  z-index: 100;
+  transition: left 0.5s ease;
+}
+
+nav.active {
+  left: 0px;
+}
+
+/* Inner wrapper for children (relative positioning) */
+nav > .inner {
+  position: relative;
+  /* child elements like #close will use this as reference */
+  width: 100%;
+  height: 100%;
+}
+
+nav a {
+  display: flex;
+  gap: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: var(--font-color);
+}
+
+.logo {
+  margin-bottom: 40px;
+}
+
+.logo a {
+  gap: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  width: 60px;
+  height: 60px;
+}
+
+.link {
+  transition-duration: 0.5s;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  border-radius: 15px;
+}
+
+.link:hover {
+  background-color: var(--bg-color);
+  cursor: pointer;
+}
+
+.link.active {
+  background-color: var(--bg-color);
+}
+
+.link a {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.link p {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+#close {
+  padding: 15px;
+  background-color: var(--bg-color);
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  cursor: pointer;
 }
 
 #expand {
@@ -21,13 +126,13 @@ main {
   margin: 60px;
 }
 
-@media(min-width: 750px) {
+@media (min-width: 750px) {
   main {
     margin: 60px 180px;
   }
 }
 
-@media(min-width: 1400px) {
+@media (min-width: 1400px) {
   main {
     margin: 80px 360px;
   }
@@ -53,14 +158,14 @@ main {
   font-weight: 400;
 }
 
-@media(min-width: 750px) {
+@media (min-width: 750px) {
   #main-action {
     bottom: 60px;
     right: 180px;
   }
 }
 
-@media(min-width: 1400px) {
+@media (min-width: 1400px) {
   #main-action {
     bottom: 80px;
     right: 360px;
