--- a/css/pomodoro.css
+++ b/css/pomodoro.css
@@ -7,6 +7,7 @@
   --todo-bg: #33404a;
   --input-bg: #1a202550;
   --font-faded: #82898f;
+  --red-dark: #c2513b;
 }
 
 .pomodoro-timer {
@@ -19,32 +20,6 @@
   border-radius: 15px;
   position: relative;
 }
-
-/*
-#pomodoro-overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  border-radius: 15px;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease-in-out;
-}
-
-body.page-loaded #pomodoro-overlay {
-  opacity: 0;
-  visibility: hidden;
-}
-
-#pomodoro-overlay img {
-  width: 150px;
-  height: 150px;
-}
-*/
 
 /*Button*/
 .pomodoro-timer .settings {
@@ -122,6 +97,77 @@ p#completed-label {
 }
 
 /*Settings*/
+#timer-settings {
+  transition: all 0.3s ease-in-out;
+  /*opacity: 0;
+  visibility: hidden;*/
+}
+
+#close-settings {
+  right: 0px;
+  top: -49px;
+  height: 80px;
+  border: 1px solid var(--red-dark);
+  background: var(--red-dark);
+  padding-top: 10px;
+}
+
+#timer-form {
+  border-radius: 15px;
+  position: absolute;
+  bottom: -10;
+  left: 0;
+  width: 100%;
+  background: var(--red-dark);
+  padding: 20px 30px;
+  z-index: 1;
+}
+
+.timer-line {
+  display: flex;
+}
+
+.timer-line:last-child {
+  margin-top: 20px;
+}
+
+.timer-line * {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.timer-line label {
+  width: 50%;
+  color: var(--font-color);
+  padding: 14px 0 14px 0;
+  font-size: 16px;
+  font-family: inherit;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.timer-line input {
+  width: 50%;
+  border: none;
+  outline: none;
+  border-radius: 15px;
+  background-color: var(--input-bg);
+  color: var(--font-color);
+  padding: 15px 20px;
+  text-align: center;
+  font-size: 16px;
+  font-family: inherit;
+}
 
 /*Play / Pause Buttons */
 
@@ -137,7 +183,7 @@ p#completed-label {
 
 #timer-buttons button {
   position: absolute;
-  background-color: var(--red);
+  background-color: var(--red-dark);
   color: var(--font-color);
   border: none;
   outline: none;
